# Beluca-Pipeline

./: .gitignore  CLAUDE.md  README.md  VERSION.txt  pyproject.toml
.cursor/rules/: architecture.mdc  bpe-nondev-basics.mdc  cicd.mdc  coding-style.mdc  gui-tabs.mdc  local-windows-test-build.mdc  nuke-plugin.mdc  path-normalization.mdc  self-updater.mdc
.cursor/skills/: add-sg-feature.md  add-tab.md  deploy.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: BPE_User_Guide.md  build_pdf.py
installer/: bpe.spec  generate_icon.py  icon.icns
installer/ffmpeg-bin/: README.txt
scripts/: bpe_windows_env_patch.bat  bpe_windows_env_patch.ps1  build_shotgrid_ca_bundle.py  build_test_exe.bat  build_test_exe.ps1  fetch_ffmpeg_windows.ps1  generate_feedback_panel_pngs.py  install_to_nuke.bat  install_to_nuke.sh  make_manual.py
src/bpe/: __init__.py  __main__.py
templates/: shot_node_template.nk
tests/: conftest.py
tests/core/: test_access.py  test_ai_qc.py  test_atomic_io.py  test_cache.py  test_feedback_file_log.py  test_feedback_project_paths.py  test_ffmpeg_paths.py  test_mov_colorspace.py  test_nk_finder.py  test_nk_generator.py  test_nk_parser.py  test_nuke_render_paths.py  test_presets.py  test_settings.py  test_shot_builder.py  test_shotgrid_browser.py  test_shotgrid_ca_bundle.py  test_shotgrid_proxy.py  test_shotgrid_settings.py  test_shotgun_python_api_path.py  test_shotgun_upload_trace.py  test_update_checker.py  test_upload_exc_diag.py  test_win_subprocess.py  test_windows_app_id.py
tests/gui/: test_feedback_panel_png.py  (+6 more)
(+99 files in other folders)
