[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpe"
dynamic = ["version"]
description = "Beluca Pipeline Engine - VFX Pipeline Desktop Tool"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "shotgun-api3>=3.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov",
    "ruff",
    "pyinstaller>=6.0",
]

[project.scripts]
bpe = "bpe.__main__:main"

[project.gui-scripts]
bpe-gui = "bpe.__main__:main"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/bpe"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
